--- a/style/style.css
+++ b/style/style.css
@@ -280,6 +280,9 @@ iframe {
 /* style pentru display-uri mai mici de 600px */
 
 @media only screen and (max-width: 600px) {
+    .nav-menu a{
+        font-size: 1rem;
+    }
     .hero-section h1 {
         font-size: 1.2em;
         margin: 5px 20px;
